finish fmp4_segmentbase

--- a/libavutil/Makefile
+++ b/libavutil/Makefile
@@ -86,6 +86,7 @@ HEADERS = adler32.h                                                     \
           tea.h                                                         \
           tx.h                                                          \
           film_grain_params.h                                           \
+          dashdec_segmentbase_parser.h                                  \
 
 HEADERS-$(CONFIG_LZO)                   += lzo.h
 
@@ -174,6 +175,7 @@ OBJS = adler32.o                                                        \
        tx_int32.o                                                       \
        video_enc_params.o                                               \
        film_grain_params.o                                              \
+       dashdec_segmentbase_parser.o
 
 
 OBJS-$(CONFIG_CUDA)                     += hwcontext_cuda.o
